第六章完成

--- a/css/wedding1.css
+++ b/css/wedding1.css
@@ -6,7 +6,7 @@ body{
 	margin: 0;
 	list-style: none;
 }
-.logo,.header,.trun,.sea,.show,.show_bottom,.read,.customer,.bigPic,.internet,.Input,.getBaojia,.submit{
+.logo,.header,.trun,.sea,.show,.show_bottom,.read,.customer,.bigPic,.internet,.Input,.getBaojia,.submit,.footer{
 	width: 100%;
 	max-width: 640px;
 	min-width: 320px;
@@ -45,9 +45,6 @@ body{
 	width: 100%;
 }
 /*海南这个ul*/
-.sea{
-	/*margin: 40px auto;*/
-}
 .sea ul{
 	display: flex;
 	height: 300px;
@@ -145,14 +142,12 @@ body{
 .Input ul li{
 	width: 100%;
 	box-sizing: border-box;
-	/*background: #f9f9f9;*/
-	/*background: pink;*/
 }
 .Input ul li input{
 	width: 96%;
 	font-size: 2vw;
 	padding-left: 10%;
-	padding: 15px;
+	padding: 20px;
 	background: #f9f9f9;
 	margin-bottom: 10px;
 	border: 1px solid #dddddd;
@@ -175,5 +170,44 @@ body{
 	font-size: 1.8vw;
 	color: #666666;
 	text-align: center;
-	padding:30px;
+	padding-top: 20px;
+	padding-bottom:80px;
+}
+/*footer开始*/
+.footer{
+	height: 800px;
+	background: #222222;
+}
+.footer p{
+	text-align: center;
+}
+.footer p:nth-child(1),.footer p:nth-child(4),.footer p:nth-child(6){
+	font-size: 1.8vw;
+	color: white;
+}
+.footer p:nth-child(3){
+	font-size: 4vw;
+	padding: 10px 20px 30px 20px;
+	color: white;
+}
+.footer ul{
+	width: 50%;
+	margin: 0 auto;
+}
+.footer ul li img{
+	padding: 50px 0;
+	width: 100%;
+}
+.footerBottom{
+	border-top: 1px solid #dddddd;
+}
+.footer h6{
+	text-align: center;
+	color: #666666;
+}
+.footer h6 span:hover{
+	color: #cdac5f;
+}
+.footer h6:nth-child(1){
+	padding-top: 30px;
 }
