--- a/css/packagedProducts.css
+++ b/css/packagedProducts.css
@@ -13,7 +13,6 @@ body{
 }
 .header{
 	background: #f7f7f7;
-	height: 90px;
 	box-sizing: border-box;
 	margin:0 auto 20px;
 	border-bottom: 1px solid #cdcccc;
@@ -22,7 +21,7 @@ body{
 }
 .header p{
 	font-size: 2vw;
-	line-height: 90px;
+	padding: 20px 0;
 }
 .header p:nth-child(1){
 	margin-left: 3%;
@@ -32,12 +31,11 @@ body{
 }
 /*豪华拧包装*/
 .luxury{
-	margin: 0 auto 20px;
+	margin: 0 auto 10px;
 }
 .luxury ul{
 	width: 95%;
 	margin: 0 auto;
-	height: 126px;
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
@@ -45,7 +43,6 @@ body{
 }
 .luxury ul li{
 	line-height: 62px;
-	height: 62px;
 	font-size: 2vw;
 	text-align: center;
 	width: 48%;
@@ -58,10 +55,8 @@ body{
 }
 /*大图*/
 .bigPic{
-	height: 2700px;
 	margin: 0 auto;
 	background: #ffffff;
-	align-content: space-between;
 }
 .bigPic img{
 	padding-top: 20px;
@@ -70,11 +65,11 @@ body{
 }
 /*footer开始*/
 .footer{
-	height: 200px;
-	margin: 10px auto 30px;
+	padding-bottom: 150px;
+	margin: 0 auto;
 }
 .footer p{
-	line-height: 52px;
+	padding: 20px 0;
 	font-size: 1.7vw;
 	color: #999999;
 	text-align: center;
@@ -83,14 +78,13 @@ body{
 .dingwei{
 	position: fixed;
 	left: 33.4%;
-	top: 765px;
+	top: 825px;
 	margin: 0 auto;
 }
 .dingwei img{
 	width: 100%;
 }
 .dingwei ul{
-	height: 90px;
 	background: #082855;
 	display: flex;
 }
