--- a/css/wedding1.css
+++ b/css/wedding1.css
@@ -47,18 +47,18 @@ body{
 /*海南这个ul*/
 .sea ul{
 	display: flex;
-	height: 300px;
 }
 .sea ul li{
 	position: relative;
+	padding: 30px 0;
 }
 .sea img{
 	width: 100%;
 }
 .sea p{
 	position: absolute;
-	left: 33px;
-	top: 168px;
+	left: 20%;
+	top: 69%;
 	font-size: 1.7vw;
 }
 .sea p:hover{
@@ -66,19 +66,23 @@ body{
 }
 /*作品展示图片*/
 .show{
-	height: 100px;
 	background: #ffffff;
+	padding: 20px 0;
+}
+.show img{
+	width: 100%;
 }
 /*作品展示下面*/
 .show_bottom ul{
 	display: flex;
 	flex-wrap: wrap;
-	height: 800px;
+	/*height: 800px;*/
 	justify-content: space-around;
 }
 .show_bottom ul li{
 	width: 32%;
-	height: ;
+	/*height: ;*/
+	padding: 10px 0;
 }
 .show_bottom ul li p:hover{
 	color: #cdac5f;
@@ -94,7 +98,6 @@ body{
 }
 /*read开始*/
 .read ul{
-	height: 80px;
 	display: flex;
 	background: #efefef;
 }
@@ -105,7 +108,7 @@ body{
 	width: 32%;
 	text-align: center;
 	font-size: 1.5vw;
-	line-height: 80px;
+	padding: 30px 0;
 	color: #666666;
 }
 .read ul li:hover{
@@ -113,6 +116,7 @@ body{
 }
 /*每周访客*/
 .customer img{
+	padding: 30px 0;
 	width: 100%;
 }
 /*大图开始*/
@@ -169,9 +173,8 @@ body{
 .submit p{
 	font-size: 1.8vw;
 	color: #666666;
+	padding: 30px 0 50px;
 	text-align: center;
-	padding-top: 20px;
-	padding-bottom:80px;
 }
 /*footer开始*/
 .footer{
@@ -181,9 +184,16 @@ body{
 .footer p{
 	text-align: center;
 }
+.footer p:nth-child(1){
+	padding-top: 30px;
+}
 .footer p:nth-child(1),.footer p:nth-child(4),.footer p:nth-child(6){
 	font-size: 1.8vw;
 	color: white;
+}
+.footer p:nth-child(2),.footer p:nth-child(5){
+	color: gray;
+	padding: 20px 0;
 }
 .footer p:nth-child(3){
 	font-size: 4vw;
