--- a/css/index.css
+++ b/css/index.css
@@ -19,19 +19,18 @@ body{
 }
 /*装修类型开始*/
 .type{
-	margin: 30px auto 0;
+	padding-top: 10px;
+	margin: 10px auto;
+	box-sizing: border-box;
 }
 .type ul{
-	height: 380px;
 	display: flex;
 	flex-wrap: wrap;
-	align-content: center;
+	justify-content: space-around;
 }
 .type ul li{
-	box-sizing: border-box;
 	text-align: center;
-	width: 20%;
-	padding-right: 3%;
+	width: 19%;
 }
 .type ul li p:hover{
 	color: #0099ff;
@@ -50,7 +49,7 @@ body{
 /*豪华领包装*/
 .luxury ul{
 	flex: 1;
-	height: 310px;
+	padding: 20px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -63,16 +62,15 @@ body{
 }
 /*装修计算机*/
 .computer{
-	height: 65px;
+	box-sizing: border-box;
 	background: #082855;
 	display: flex;
 	align-items: center;
-	margin-top: 20px;
-	margin-bottom: 30px;
+	padding: 15px;
 }
 .computer b{
 	width: 2%;
-	height: 45px;
+	/*height: 35px;*/
 	margin-left: 4%;
 	margin-right: 2%;
 	background: #0099ff;
@@ -94,7 +92,7 @@ body{
 .shuru{
 	max-width: 640px;
 	min-width: 320px;
-	margin: 0 auto;
+	margin: 10px auto;
 }
 .shuru ul{
 	margin: 0 auto;
@@ -102,8 +100,9 @@ body{
 }
 .shuru ul li input{
 	box-sizing: border-box;
-	height: 60px;
+	/*height: 70px;*/
 	width: 100%;
+	padding: 20px;
 	margin-bottom: 10px;
 	font-size: 1.6vw;
 	color: #666666;
@@ -116,16 +115,15 @@ body{
 	justify-content: space-between;
 }
 .shuru ul li:nth-child(5) p,.shuru ul li:nth-child(6) p{
-	width: 30%;
-	height: 60px;
+	width: 32%;
 	background: #fff;
-	font-size: 1.6vw;
+	font-size: 1.3vw;
 	color: #666666;
 	box-sizing: border-box;
-	line-height: 60px;
+	padding: 20px;
 }
 .shuru ul li:nth-child(5) p span,.shuru ul li:nth-child(6) p span{
-	margin-left: 20%;
+	margin-left: 10%;
 }
 /*免费申请*/
 .application{
@@ -133,7 +131,8 @@ body{
 	max-width: 640px;
 	min-width: 320px;
 	background: #0f6aad;
-	margin: 30px auto 70px;
+	margin: 20px auto 50px;
+	box-sizing: border-box;
 }
 .application P{
 	font-size: 1.8vw;
@@ -143,34 +142,26 @@ body{
 	text-align: center;
 }
 /*案列展示下面四张图*/
-.show{
-	margin: 20px auto;
-	height: 680px;
-}
 .show ul{
-	margin: 0 auto;
+	margin: 20px auto;
 	width: 95%;
-	height: 680px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	align-content: space-between;
 }
 .show ul li{
 	width: 48%;
+	padding-bottom: 10px;
 }
 .show ul li p{
 	background: white;
 	font-size: 1.7vw;
-	line-height: 100px;
+	padding: 17px;
 	text-align: center;
 }
 /*设计团队下面图片*/
-.assign{
-	margin-top: 30px;
-}
 .assign ul{
-	margin: -17px auto;
+	margin: 10px auto;
 	width: 97%;
 	display: flex;
 	flex-wrap: wrap;
@@ -178,20 +169,17 @@ body{
 	align-content: space-between;
 }
 .assign ul li{
-	width: 32%;
-	height: 280px;
+	width: 33%;
 	margin-bottom: 10px;
 }
 .assign ul li p{
 	text-align: center;
-	font-size: 0.9vw;
+	font-size: 1vw;
+	color: #666666;
 	padding: 6px 0;
 	background: #082855;
 }
 /*家装知识下面图片部分*/
-.knowledge div{
-	margin-top: -30px;
-}
 .knowledge ul{
 	display: flex;
 }
@@ -207,19 +195,17 @@ body{
 }
 /*家居风水*/
 .home{
-	height: 280px;
 	background: #fff;
-	margin-top: 20px;
 }
 .home ul li{
 	display: flex;
-	margin: 18px 0 15px;
+	padding: 15px;
 }
 .home ul li b{
-	padding: 10px;
+	margin-right: 4%;
 }
 .home ul li a{
-	font-size: 1.9vw;
+	font-size: 1.7vw;
 	color: #999999;
 	text-decoration: none;
 }
@@ -228,8 +214,8 @@ body{
 }
 /*footer开始*/
 .footer{
-	height: 200px;
-	margin: 50px auto 30px;
+	padding-bottom: 140px;
+	padding-top: 20px
 }
 .footer p{
 	line-height: 52px;
@@ -241,7 +227,7 @@ body{
 .dingwei{
 	position: fixed;
 	left: 33.4%;
-	top: 87%;
+	top: 89%;
 }
 .dingwei ul{
 	height: 90px;
