--- a/css/kuhu.css
+++ b/css/kuhu.css
@@ -181,6 +181,7 @@ img{
 /*版权部分开始*/
 .banquan{
 	background: #000000;
+	/*padding-bottom: 90px;*/
 }
 .banquan ul li{
 	color: white;
@@ -188,11 +189,15 @@ img{
 	padding: 10px 0;
 }
 .banquan ul li:last-child{
-	padding-bottom: 40px;
+	padding-bottom: 120px;
 }
 /*footer开始*/
 .footer{
+	width: 32%;
 	background: #1473cc;
+	position: fixed;
+	left: 34%;
+	bottom: 0;
 }
 .footer ul{
 	display: flex;
@@ -202,4 +207,13 @@ img{
 .footer ul span{
 	font-size: 1.9vw;
 	color: white;
+}
+@media screen and (max-width:639px){
+	.footer{
+	width: 100%;
+	position: fixed;
+	left: 0;
+	z-index:40;
+	bottom:70px;
+}
 }
