--- a/css/packagedProducts.css
+++ b/css/packagedProducts.css
@@ -78,7 +78,7 @@ body{
 .dingwei{
 	position: fixed;
 	left: 33.4%;
-	top: 825px;
+	bottom: 0;
 	margin: 0 auto;
 }
 .dingwei img{
@@ -91,4 +91,11 @@ body{
 .dingwei ul li{
 	width: 25%;
 }
-
+@media screen and (max-width:639px){
+	.dingwei{
+	position: fixed;
+	left: 0;
+	z-index:40;
+	bottom:20px;
+}
+}
