--- a/css/TVnews.css
+++ b/css/TVnews.css
@@ -49,6 +49,14 @@ body{
 .video{
 	margin: 0 auto;
 }
+.video li{
+	overflow: hidden;
+}
+.video li:hover{
+	transition: 1.5s;
+	
+	transform: rotateY(180deg);
+}
 .video img{
 	width: 100%;
 }
@@ -102,7 +110,7 @@ body{
 .dingwei{
 	position: fixed;
 	left: 33.4%;
-	bottom: 0;
+	bottom: 10px;
 	margin: 0 auto;
 }
 .dingwei img{
@@ -121,7 +129,7 @@ body{
 	position: fixed;
 	left: 0;
 	z-index:40;
-	bottom:20px;
+	bottom:80px;
 }
 }
 
