--- a/css/packagedProducts.css
+++ b/css/packagedProducts.css
@@ -10,6 +10,7 @@ body{
 	width: 100%;
 	max-width: 640px;
 	min-width: 320px;
+/*	 form1.ShowDialog();*/
 }
 .header{
 	background: #f7f7f7;
@@ -57,19 +58,24 @@ body{
 .bigPic{
 	margin: 0 auto;
 	background: #ffffff;
+	overflow: hidden;
 }
 .bigPic img{
 	padding-top: 20px;
 	margin-left: 2.5%;
 	width: 95%;
 }
+.bigPic img:hover{
+	transition: 1.5s;
+	transform: scale(1.3,1);
+}
 /*footer开始*/
 .footer{
-	padding-bottom: 150px;
+	padding-bottom: 170px;
 	margin: 0 auto;
 }
 .footer p{
-	padding: 20px 0;
+	padding: 10px 0;
 	font-size: 1.7vw;
 	color: #999999;
 	text-align: center;
@@ -96,6 +102,6 @@ body{
 	position: fixed;
 	left: 0;
 	z-index:40;
-	bottom:20px;
+	bottom:70px;
 }
 }
